--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- slide2 -->
         <div id="slide2"
           class="carousel-item relative w-full bg-[url(./images/banner2.jpg)] bg-cover bg-no-repeat rounded-2xl">
-          <div class="absolute flex justify-between gap-5 bottom-10 left-12">
+          <div class="absolute flex justify-between gap-5 lg:bottom-10 lg:left-12 left-1/3 bottom-5">
             <a href="#slide1" class="btn btn-circle bg-black text-white border-black">❮</a>
             <a href="#slide3" class="btn btn-circle bg-black text-white border-black">❯</a>
           </div>
@@ -117,7 +117,7 @@
         <!-- slide3 -->
         <div id="slide3"
           class="carousel-item relative w-full bg-[url(./images/banner3.jpg)] bg-cover bg-no-repeat rounded-2xl">
-          <div class="absolute flex justify-between gap-5 bottom-10 left-12">
+          <div class="absolute flex justify-between gap-5 lg:bottom-10 lg:left-12 left-1/3 bottom-5">
             <a href="#slide2" class="btn btn-circle bg-black text-white border-black">❮</a>
             <a href="#slide4" class="btn btn-circle bg-black text-white border-black">❯</a>
           </div>
@@ -133,7 +133,7 @@
         <!-- slide4 -->
         <div id="slide4"
           class="carousel-item relative w-full bg-[url(./images/banner4.jpg)] bg-cover bg-no-repeat rounded-2xl">
-          <div class="absolute flex justify-between gap-5 bottom-10 left-12">
+          <div class="absolute flex justify-between gap-5 lg:bottom-10 lg:left-12 left-1/3 bottom-5">
             <a href="#slide3" class="btn btn-circle bg-black text-white border-black">❮</a>
             <a href="#slide1" class="btn btn-circle bg-black text-white border-black">❯</a>
           </div>
