--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
     <!-- professional section -->
     <section class="mb-24 px-2">
       <div>
-        <div class="divider mb-8"></div>
+        <div class="border-dashed border-b-2 mb-8"></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center mb-5 lg:mb-10">Professional Hockeys Club</h2>
         <p class="text-sm lg:text-base font-medium text-center w-4/5 lg:w-2/4 mx-auto opacity-85">Welcome to the heart of excellence. Our Professional Hockey Club embodies a legacy of precision, teamwork, and relentless pursuit of victory.</p>
-        <div class="divider mt-8"></div>
+        <div class="border-dashed border-t-2 mt-8"></div>
       </div>
       <!-- progress bar  -->
       <div class="grid grid-cols-1 lg:grid-cols-4 gap-3 mt-12">
@@ -198,10 +198,10 @@
     <!-- program section -->
     <section class="mb-24 px-2">
       <div>
-        <div class="divider mb-8"></div>
+        <div class="border-dashed border-b-2 mb-8"></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center mb-5 lg:mb-10">Program Sections</h2>
         <p class="text-sm lg:text-base font-medium text-center w-4/5 lg:w-2/4 mx-auto opacity-85">Dive into excellence with our diverse Program Sections. From skill development to strategic plays, we tailor your hockey journey for success.</p>
-        <div class="divider mt-8"></div>
+        <div class="border-dashed border-t-2 mt-8"></div>
       </div>
       <!-- programs grid container -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12">
@@ -232,10 +232,10 @@
     <!-- Products section -->
     <section class="mb-24 px-2">
       <div>
-        <div class="divider mb-8"></div>
+        <div class="border-dashed border-b-2 mb-8"></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center mb-5 lg:mb-10">Our New Products</h2>
         <p class="text-sm lg:text-base font-medium text-center w-4/5 lg:w-2/4 mx-auto opacity-85">Explore innovation on the ice. Discover excellence with our new hockey products, designed for peak performance and style in every game.</p>
-        <div class="divider mt-8"></div>
+        <div class="border-dashed border-t-2 mt-8"></div>
       </div>
 
       <!-- products grid container -->
@@ -446,10 +446,10 @@
     <!-- Clients section -->
     <section class="mb-24 px-2">
       <div>
-        <div class="divider mb-8"></div>
+        <div class="border-dashed border-b-2 mb-8"></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center mb-5 lg:mb-10">Clients Question</h2>
         <p class="text-sm lg:text-base font-medium text-center w-4/5 lg:w-2/4 mx-auto opacity-85">Answering your queries with expertise. Explore our Clients Questions section for comprehensive insights into our hockey offerings.</p>
-        <div class="divider mt-8"></div>
+        <div class="border-dashed border-t-2 mt-8"></div>
       </div>
       <!-- accordian container  -->
       <div class="flex flex-col lg:flex-row items-center gap-5 p-8 border border-slate-300 rounded-lg mt-6 lg:mt-12">
@@ -519,10 +519,10 @@
     <!-- Get in Touch section -->
     <section class="mb-24 px-4">
       <div>
-        <div class="divider mb-8"></div>
+        <div class="border-dashed border-b-2 mb-8"></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center mb-5 lg:mb-10">Get in Touch</h2>
         <p class="text-sm lg:text-base font-medium text-center w-4/5 lg:w-2/4 mx-auto opacity-85">Connect with us! Whether it's inquiries, feedback, or collaboration, we're here. Reach out and join the conversation in the world of hockey.</p>
-        <div class="divider mt-8"></div>
+        <div class="border-dashed border-t-2 mt-8 mb-8"></div>
       </div>
       <!-- contact container   -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
