contact section updated

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
           </div>
           <div class="p-8 space-y-6 bg-[#629cf31a] rounded-lg">
             <img src="images/Group 1171275321.png" alt="">
-            <p class="text[#13131866]">Location : <br>
+            <p class="text-[#13131866]">Location : <br>
               <span class="font-extrabold text-black">152/1 Mohakhali Wireless Gate</span></p>
           </div>
         </div>
