--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Pages</a></li>
-            <li><a>Blog</a></li>
-            <li><a>Contact</a></li>
+            <li><a class="hover:text-red-500 font-bold">Home</a></li>
+            <li><a class="hover:text-red-500 font-bold">About</a></li>
+            <li><a class="hover:text-red-500 font-bold">Pages</a></li>
+            <li><a class="hover:text-red-500 font-bold">Blog</a></li>
+            <li><a class="hover:text-red-500 font-bold">Contact</a></li>
           </ul>
         </div>
         <div class="navbar-end">
