--- a/index.html
+++ b/index.html
@@ -285,18 +285,18 @@
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-eye w-6 text-slate-400"></i>
-                <p class="text-slate-400">20</p>
+                <p class="text-slate-400">21</p>
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-heart w-6 text-slate-400"></i>
-                <p class="text-slate-400">200</p>
+                <p class="text-slate-400">201</p>
               </div>
             </div>
             <!-- body content -->
             <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
             <p class="font-semibold text-slate-400">Dive into flag football excellence with World Cup gear.
             <div class="flex flex-col lg:flex-row gap-2">
-              <p class="text-lg font-extrabold text-btn-color">Price - $22.00</p>
+              <p class="text-lg font-extrabold text-btn-color">Price - $23.00</p>
               <div class="flex justify-center items-center">
                 <i class="fa-solid fa-cart-shopping w-6 text-slate-400"></i>
                 <p class="text-slate-400">Delivery Fee: Free</p>
@@ -317,11 +317,11 @@
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-eye w-6 text-slate-400"></i>
-                <p class="text-slate-400">20</p>
+                <p class="text-slate-400">24</p>
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-heart w-6 text-slate-400"></i>
-                <p class="text-slate-400">200</p>
+                <p class="text-slate-400">205</p>
               </div>
             </div>
             <!-- body content -->
@@ -329,7 +329,7 @@
             <p class="font-semibold text-slate-400">Elevate your style with our fashionable hockey caps.</p>
             <!-- last icon container -->
             <div class="flex flex-col lg:flex-row gap-2">
-              <p class="text-lg font-extrabold text-btn-color">Price - $22.00</p>
+              <p class="text-lg font-extrabold text-btn-color">Price - $32.00</p>
               <div class="flex justify-center items-center">
                 <i class="fa-solid fa-cart-shopping w-6 text-slate-400"></i>
                 <p class="text-slate-400">Delivery Fee: Free</p>
@@ -350,11 +350,11 @@
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-eye w-6 text-slate-400"></i>
-                <p class="text-slate-400">20</p>
+                <p class="text-slate-400">25</p>
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-heart w-6 text-slate-400"></i>
-                <p class="text-slate-400">200</p>
+                <p class="text-slate-400">232</p>
               </div>
             </div>
             <!-- body content -->
@@ -362,7 +362,7 @@
             <p class="font-semibold text-slate-400">Explore perfection in every stitch with our hockey jerseys.</p>
             <!-- last icon container -->
             <div class="flex flex-col lg:flex-row gap-2">
-              <p class="text-lg font-extrabold text-btn-color">Price - $22.00</p>
+              <p class="text-lg font-extrabold text-btn-color">Price - $28.00</p>
               <div class="flex justify-center items-center">
                 <i class="fa-solid fa-cart-shopping w-6 text-slate-400"></i>
                 <p class="text-slate-400">Delivery Fee: Free</p>
@@ -383,11 +383,11 @@
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-eye w-6 text-slate-400"></i>
-                <p class="text-slate-400">20</p>
+                <p class="text-slate-400">27</p>
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-heart w-6 text-slate-400"></i>
-                <p class="text-slate-400">200</p>
+                <p class="text-slate-400">287</p>
               </div>
             </div>
             <!-- body content -->
@@ -395,7 +395,7 @@
             <p class="font-semibold text-slate-400">Secure your game with top-notch hockey helmets.</p>
             <!-- last icon container -->
             <div class="flex flex-col lg:flex-row gap-2">
-              <p class="text-lg font-extrabold text-btn-color">Price - $22.00</p>
+              <p class="text-lg font-extrabold text-btn-color">Price - $56.00</p>
               <div class="flex justify-center items-center">
                 <i class="fa-solid fa-cart-shopping w-6 text-slate-400"></i>
                 <p class="text-slate-400">Delivery Fee: Free</p>
@@ -416,11 +416,11 @@
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-eye w-6 text-slate-400"></i>
-                <p class="text-slate-400">20</p>
+                <p class="text-slate-400">26</p>
               </div>
               <div class="flex justify-center items-center">
                 <i class="fa-regular fa-heart w-6 text-slate-400"></i>
-                <p class="text-slate-400">200</p>
+                <p class="text-slate-400">270</p>
               </div>
             </div>
             <!-- body content -->
@@ -428,7 +428,7 @@
             <p class="font-semibold text-slate-400">Premium quality footballs.</p>
             <!-- last icon container -->
             <div class="flex flex-col lg:flex-row gap-2">
-              <p class="text-lg font-extrabold text-btn-color">Price - $22.00</p>
+              <p class="text-lg font-extrabold text-btn-color">Price - $50.00</p>
               <div class="flex justify-center items-center">
                 <i class="fa-solid fa-cart-shopping w-6 text-slate-400"></i>
                 <p class="text-slate-400">Delivery Fee: Free</p>
@@ -452,8 +452,8 @@
         <div class="border-dashed border-t-2 mt-8"></div>
       </div>
       <!-- accordian container  -->
-      <div class="flex flex-col lg:flex-row items-center gap-5 p-8 border border-slate-300 rounded-lg mt-6 lg:mt-12">
-        <div class="flex-1">
+      <div class="flex flex-col lg:flex-row items-center gap-10 p-8 border border-slate-300 rounded-lg mt-6 lg:mt-12">
+        <div>
           <img src="images/11.png" alt="">
         </div>
         <div class="flex-1">
